--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    height: 800px;
+    height: auto;
   }
 
 @media (max-width: 768px) {
